--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autosize": "^4.0.2",
     "axios": "^0.18.0",
     "chartist": "^0.10.1",
+    "cropperjs": "^1.5.2",
     "crypto-js": "^3.1.9-1",
     "docx": "^4.7.1",
     "electron-is-dev": "^1.0.1",
@@ -23,6 +24,7 @@
     "md5": "^2.2.1",
     "medium-editor": "^5.10.0",
     "medium-editor-autofocus": "^1.1.1",
+    "moment": "^2.24.0",
     "npm-run-all": "^4.1.1",
     "perfect-scrollbar": "^1.3.0",
     "prop-types": "^15.7.2",
@@ -35,13 +37,15 @@
     "react-chartist": "^0.13.1",
     "react-color": "^2.14.1",
     "react-confirm-alert": "^2.3.0",
+    "react-cropper": "^1.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-drag-and-drop": "^2.4.0",
     "react-files": "^2.4.7",
-    "react-full-screen": "^0.2.3",
+    "react-full-screen": "^0.2.4",
     "react-google-maps": "^9.4.5",
     "react-google-recaptcha": "^1.0.4",
+    "react-image-crop": "^8.1.0",
     "react-input-trigger": "^1.1.2",
     "react-medium-editor": "^1.8.1",
     "react-responsive-carousel": "^3.1.43",
